syntax = "proto3";

package cheqd.did.v2;

import "cheqd/did/v2/diddoc.proto";
import "google/api/annotations.proto";

option go_package = "github.com/cheqd/cheqd-node/x/did/types";

service Query {
  
  // returns DID Doc for a for a given DID
  rpc DidDoc(QueryGetDidDocRequest) returns (QueryGetDidDocResponse) {
    option (google.api.http).get = "/cheqd/did/v2/{id}";
  }

  // returns specific version of DID Document 
  rpc DidDocVersion(QueryGetDidDocVersionRequest) returns (QueryGetDidDocVersionResponse) {
    option (google.api.http).get = "/cheqd/did/v2/{id}/version/{version}";
  }

  // returns a metadata for all versions of a given DID Doc
  rpc AllDidDocVersionsMetadata(QueryGetAllDidDocVersionsMetadataRequest) returns (QueryGetAllDidDocVersionsMetadataResponse) {
    option (google.api.http).get = "/cheqd/did/v2/{id}/metadata";
  }
}

message QueryGetDidDocRequest {
  // is a DID to be fetched
  string id = 1;
}

message QueryGetDidDocResponse {
  DidDocWithMetadata value = 1;
}

message QueryGetDidDocVersionRequest {
  // is a DID
  string id = 1;
  // is a unique value that maps DID Doc state at specific time
  string version = 2;
}

message QueryGetDidDocVersionResponse {
  DidDocWithMetadata value = 1;
}

message QueryGetAllDidDocVersionsMetadataRequest {
  // is a DID
  string id = 1;
}

message QueryGetAllDidDocVersionsMetadataResponse {
  repeated Metadata versions = 1;
}
